--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       crossorigin="anonymous">
     </script>
     
-    <title>React App</title>
+    <title>Moments</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
